--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,4 @@
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+set -g default-terminal screen-256color
 bind-key -r r source-file ~/.config/tmux/tmux.conf
 
 bind-key -r a run-shell "~/.local/bin/tmux-sessionizer $WS_PATH/RDSAdminWorkflow"
@@ -21,6 +20,7 @@ set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
+set -g @tpm-clean 'u'
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
@@ -36,13 +36,32 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-set -g @catppuccin_flavour 'mocha'
-
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'niksingh710/minimal-tmux-status'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
+# These are the default values used inside the plugin to acheive the preview shown above.
+
+set -g @minimal-tmux-bg "#698DDA"
+set -g @minimal-tmux-justify "centre"
+set -g @minimal-tmux-indicator-str "  tmux  "
+set -g @minimal-tmux-indicator true
+set -g @minimal-tmux-status "bottom"
+
+# Enables or disables the left and right status bar
+
+# expanded icon (fullscreen icon) 
+set -g @minimal-tmux-expanded-icon " 󰊓 "
+
+#on all tabs (default is false)
+# false will make it visible for the current tab only
+set -g @minimal-tmux-show-expanded-icons-for-all-tabs true
+
+# To add or remove extra text in status bar
+set -g @minimal-tmux-status-right-extra ""
+set -g @minimal-tmux-status-left-extra ""
+
 
 run '~/.tmux/plugins/tpm/tpm'
 
